k8s/sdp-injector.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sdp-injector
  name: sdp-injector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sdp-injector
  template:
    metadata:
      labels:
        app: sdp-injector
    spec:
      containers:
      - image: ghcr.io/appgate/sdp-injector
        name: sdp-injector
        volumeMounts:
          - mountPath: "/opt/sdp-injector-secrets"
            name: sdp-injector-secrets
            readOnly: true
      volumes:
        - name: sdp-injector-secrets
          secret:
            secretName: sdp-injector-secrets
---
apiVersion: v1
kind: Service
metadata:
  name: sdp-injector
spec:
  selector:
    app: sdp-injector
  ports:
    - port: 443
      targetPort: 8443
      name: https-webhooks
